@@ -1,3 +1,7 @@
+==== 28/01/2015
+
+- Ajout d'un bouton pour tenter de soigner le reseaux zwave automatiquement
+
 ==== 25/01/2015
 
 - Amélioration de la santé du zwave
